--- a/src/components/rocket/singlerocket/singlerocket.css
+++ b/src/components/rocket/singlerocket/singlerocket.css
@@ -1,3 +1,8 @@
-button {
-  border: 0;
+.badge {
+  background-color: rgb(25 130 130);
+  display: inline-block;
+  border-radius: 5px;
+  padding: 4px 10px;
+  color: #fff;
+  margin: 10px;
 }
