Add the required changes and change the color of the logo and Add test for the other components

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -48,3 +48,9 @@ hr {
   margin-bottom: 0;
   margin-top: 4px;
 }
+.space__heading {
+  color: grey;
+}
+.nav__container__parnav__brand__logo__img {
+  filter: grayscale(1);
+}
